Mise à jour du fichier HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,102 @@
 </head>
 
 <body>
-  <h1>C'est un premier essai</h1>
+  <header class="header">
+
+
+  </header>
+
+  <main class="main">
+
+    <section class="popular">
+      <div class="popular__header">
+        <h2 class="popular__title heading-2">Les plus populaires</h2>
+        <i></i>
+      </div>
+
+      <div class="popular__card">
+        <img src="#" alt="Photo de l'hôtel Le soleil du matin">
+        <div class="popular__info">
+          <h4 class="heading-4">Hôtel Le soleil du matin</h4>
+          <p class="paragraph">Nuit à partir de 128€</p>
+          <div class="popular__icons">
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="popular__card">
+        <img src="#" alt="Photo d'Au coeur de l'eau">
+        <div class="popular__info">
+          <h4 class="heading-4">Au cœur de l'eau Chambres d'hôtes</h4>
+          <p class="paragraph">Nuit à partir de 71€</p>
+          <div class="popular__icons">
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="popular__card">
+        <img src="#" alt="Photo de l'hôtel Tout bleu et Blanc">
+        <div class="popular__info">
+          <h4 class="heading-4">Hôtel Tout bleu et Blanc</h4>
+          <p class="paragraph">Nuit à partir de 68€</p>
+          <div class="popular__icons">
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="lodging">
+
+    </section>
+
+    <section class="activities">
+
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <div class="footer__about">
+      <h3 class="footer__title heading-3">A propos</h3>
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link">Fonctionnement du site</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Conditions générales de vente</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Données et confidentialité</a></li>
+      </ul>
+    </div>
+
+    <div class="footer__lodging">
+      <h3 class="footer__title heading-3">Nos hébergements</h3>
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link">Charte qualité</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Soumettre votre hôtel</a></li>
+      </ul>
+    </div>
+
+    <div class="footer__help">
+      <h3 class="footer__title heading-3">Assistance</h3>
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link">Centre d'aide</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Nous contacter</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
