--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Links -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/variables.css">
+  <link rel="stylesheet" href="./css/utilities.css">
   <link rel="stylesheet" href="./css/main.css">
 
   <!-- Title -->
-  <title>Reservia</title>
+  <title>Reservia &mdash; Trouvez votre hébergement pour des vacances de rêve</title>
 </head>
 
 <body>
@@ -85,7 +91,7 @@
 
   </main>
 
-  <footer class="footer">
+  <footer class="footer bg--light">
     <div class="footer__about">
       <h3 class="footer__title heading-3">A propos</h3>
       <ul class="footer__list">
