Design de la barre du Header

--- a/index.html
+++ b/index.html
@@ -23,10 +23,40 @@
 <body>
   <header class="header">
 
+    <div class="header__logo">
+      <img src="./img/Reservia.svg" alt="Logo de Reservia">
+    </div>
+
+    <nav class="header__nav">
+      <ul class="header__list">
+        <li class="header__item">
+          <a href="#" class="header__link header__link--active">Hébergements</a>
+        </li>
+        <li class="header__item">
+          <a href="#" class="header__link">Activités</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="header__register">
+      <button class="header__btn">S'inscrire</button>
+    </div>
 
   </header>
 
   <main class="main">
+
+    <header class="main-header">
+      <h1 class="heading-1">Trouvez votre hébergement pour des vacances de rêve</h1>
+      <p class="paragraph">En plein centre ville ou en pleine nature</p>
+
+      <form action="#" class="search">
+        <input type="text" class="search__input" placeholder="Marseille, France" />
+        <button class="search__button btn btn--cta">
+
+        </button>
+      </form>
+    </header>
 
     <section class="popular">
       <div class="popular__header">
