--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <!-- Links -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" />
 
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/variables.css">
@@ -51,9 +54,14 @@
       <p class="paragraph">En plein centre ville ou en pleine nature</p>
 
       <form action="#" class="search">
+        <div class="search__gps">
+          <button class="btn">
+            <i class="fas fa-map-marker-alt"></i>
+          </button>
+        </div>
         <input type="text" class="search__input" placeholder="Marseille, France" />
         <button class="search__button btn btn--cta">
-
+          <i class="fas fa-search"></i>
         </button>
       </form>
     </header>
