--- a/index.html
+++ b/index.html
@@ -64,6 +64,43 @@
           <i class="fas fa-search"></i>
         </button>
       </form>
+
+      <div class="filters">
+        <h2 class="heading-2">Filtres</h2>
+        <ul class="filters__list">
+          <li class="filters__item">
+            <div>
+              <i class="fas fa-money-bill-wave"></i>
+            </div>
+            <a href="#" class="filters__link">Économique</a>
+          </li>
+
+          <li class="filters__item">
+            <div>
+              <i class="fas fa-child"></i>
+            </div>
+            <a href="#" class="filters__link">Familial</a>
+          </li>
+
+          <li class="filters__item">
+            <div>
+              <i class="fas fa-heart"></i>
+            </div>
+            <a href="#" class="filters__link">Romantique</a>
+          </li>
+
+          <li class="filters__item">
+            <div>
+              <i class="fas fa-dog"></i>
+            </div>
+            <a href="#" class="filters__link">Animaux autorisés</a>
+          </li>
+        </ul>
+        <div class="filters__info">
+          <i class="fas fa-info"></i>
+          <p class="paragraph">Plus de 500 logements sont disponibles dans cette ville.</p>
+        </div>
+      </div>
     </header>
 
     <section class="popular">
