Ajout de la section Les plus populaires

--- a/index.html
+++ b/index.html
@@ -106,50 +106,56 @@
     <section class="popular">
       <div class="popular__header">
         <h2 class="popular__title heading-2">Les plus populaires</h2>
-        <i></i>
+        <i class="fas fa-chart-line"></i>
       </div>
 
-      <div class="popular__card">
-        <img src="#" alt="Photo de l'hôtel Le soleil du matin">
+      <div class="popular__card bg--white">
+        <img src="./img/popular/soleil-du-matin.jpg" alt="Photo de l'hôtel Le soleil du matin">
         <div class="popular__info">
-          <h4 class="heading-4">Hôtel Le soleil du matin</h4>
-          <p class="paragraph">Nuit à partir de 128€</p>
+          <div class="popular__text">
+            <h4 class="heading-4">Hôtel Le soleil du matin</h4>
+            <p class="paragraph">Nuit à partir de 128€</p>
+          </div>
           <div class="popular__icons">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
           </div>
         </div>
       </div>
 
-      <div class="popular__card">
-        <img src="#" alt="Photo d'Au coeur de l'eau">
+      <div class="popular__card bg--white">
+        <img src="./img/popular/coeur-de-l-eau.jpg" alt="Photo d'Au coeur de l'eau">
         <div class="popular__info">
-          <h4 class="heading-4">Au cœur de l'eau Chambres d'hôtes</h4>
-          <p class="paragraph">Nuit à partir de 71€</p>
+          <div class="popular__text">
+            <h4 class="heading-4">Au cœur de l'eau Chambres d'hôtes</h4>
+            <p class="paragraph">Nuit à partir de 71€</p>
+          </div>
           <div class="popular__icons">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star color--secondary"></i>
           </div>
         </div>
       </div>
 
-      <div class="popular__card">
-        <img src="#" alt="Photo de l'hôtel Tout bleu et Blanc">
+      <div class="popular__card bg--white">
+        <img src="./img/popular/tout-bleu-et-blanc.jpg" alt="Photo de l'hôtel Tout bleu et Blanc">
         <div class="popular__info">
-          <h4 class="heading-4">Hôtel Tout bleu et Blanc</h4>
-          <p class="paragraph">Nuit à partir de 68€</p>
+          <div class="popular__text">
+            <h4 class="heading-4">Hôtel Tout bleu et Blanc</h4>
+            <p class="paragraph">Nuit à partir de 68€</p>
+          </div>
           <div class="popular__icons">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star color--secondary"></i>
           </div>
         </div>
       </div>
