--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
   <main class="main">
 
-    <header class="main-header">
+    <header class="main-header m-small">
       <h1 class="heading-1">Trouvez votre hébergement pour des vacances de rêve</h1>
       <p class="paragraph">En plein centre ville ou en pleine nature</p>
 
-      <form action="#" class="search">
+      <form action="#" class="search m-medium">
         <div class="search__gps">
           <button class="btn">
             <i class="fas fa-map-marker-alt"></i>
@@ -66,7 +66,7 @@
       </form>
 
       <div class="filters">
-        <h2 class="heading-2">Filtres</h2>
+        <h2 class="heading-2 mb-smallest">Filtres</h2>
         <ul class="filters__list">
           <li class="filters__item">
             <div>
@@ -96,15 +96,15 @@
             <a href="#" class="filters__link">Animaux autorisés</a>
           </li>
         </ul>
-        <div class="filters__info">
+        <div class="filters__info m-small">
           <i class="fas fa-info"></i>
           <p class="paragraph">Plus de 500 logements sont disponibles dans cette ville.</p>
         </div>
       </div>
     </header>
 
-    <section class="popular">
-      <div class="popular__header">
+    <section class="popular bg--secondary">
+      <div class="popular__header m-small">
         <h2 class="popular__title heading-2">Les plus populaires</h2>
         <i class="fas fa-chart-line"></i>
       </div>
@@ -163,7 +163,7 @@
     </section>
 
     <section class="lodging">
-
+      TEST
     </section>
 
     <section class="activities">
@@ -172,7 +172,7 @@
 
   </main>
 
-  <footer class="footer bg--light">
+  <footer class="footer bg--secondary p-small">
     <div class="footer__about">
       <h3 class="footer__title heading-3">A propos</h3>
       <ul class="footer__list">
