Ajout de la section Activités

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
 <body>
   <header class="header">
 
-    <div class="header__logo">
+    <div class="header__logo p-smallest">
       <img src="./img/Reservia.svg" alt="Logo de Reservia">
     </div>
 
     <nav class="header__nav">
       <ul class="header__list">
         <li class="header__item">
-          <a href="#" class="header__link header__link--active">Hébergements</a>
+          <a href="#" class="header__link header__link--active p-smallest">Hébergements</a>
         </li>
         <li class="header__item">
-          <a href="#" class="header__link">Activités</a>
+          <a href="#" class="header__link p-smallest">Activités</a>
         </li>
       </ul>
     </nav>
 
-    <div class="header__register">
+    <div class="header__register p-smallest">
       <button class="header__btn">S'inscrire</button>
     </div>
 
@@ -103,20 +103,20 @@
       </div>
     </header>
 
-    <section class="popular bg--secondary">
+    <section class="popular bg--secondary p-smallest">
       <div class="popular__header m-small">
         <h2 class="popular__title heading-2">Les plus populaires</h2>
         <i class="fas fa-chart-line"></i>
       </div>
 
-      <div class="popular__card bg--white">
+      <div class="card popular__card bg--white mb-smallest">
         <img src="./img/popular/soleil-du-matin.jpg" alt="Photo de l'hôtel Le soleil du matin">
-        <div class="popular__info">
-          <div class="popular__text">
+        <div class="card__info">
+          <div class="card__text">
             <h4 class="heading-4">Hôtel Le soleil du matin</h4>
             <p class="paragraph">Nuit à partir de 128€</p>
           </div>
-          <div class="popular__icons">
+          <div class="card__icons">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -126,14 +126,14 @@
         </div>
       </div>
 
-      <div class="popular__card bg--white">
+      <div class="card popular__card bg--white mb-smallest">
         <img src="./img/popular/coeur-de-l-eau.jpg" alt="Photo d'Au coeur de l'eau">
-        <div class="popular__info">
-          <div class="popular__text">
+        <div class="card__info">
+          <div class="card__text">
             <h4 class="heading-4">Au cœur de l'eau Chambres d'hôtes</h4>
             <p class="paragraph">Nuit à partir de 71€</p>
           </div>
-          <div class="popular__icons">
+          <div class="card__icons">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -143,14 +143,14 @@
         </div>
       </div>
 
-      <div class="popular__card bg--white">
+      <div class="card popular__card bg--white mb-smallest">
         <img src="./img/popular/tout-bleu-et-blanc.jpg" alt="Photo de l'hôtel Tout bleu et Blanc">
-        <div class="popular__info">
-          <div class="popular__text">
+        <div class="card__info">
+          <div class="card__text">
             <h4 class="heading-4">Hôtel Tout bleu et Blanc</h4>
             <p class="paragraph">Nuit à partir de 68€</p>
           </div>
-          <div class="popular__icons">
+          <div class="card__icons">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -163,10 +163,57 @@
     </section>
 
     <section class="lodging">
-      TEST
+
     </section>
 
-    <section class="activities">
+    <section class="activities p-smallest m-smallest">
+      <h2 class="heading-2 mb-smallest">Activités à Marseille</h2>
+
+      <div class="card activities__card bg--white mb-smallest">
+        <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Vieux Port</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="card activities__card bg--white mb-smallest">
+        <img src="./img/activities/fort-de-pomegues.jpg" alt="Photo du Fort de Pomègues">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Fort de Pomègues</h4>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="card activities__card bg--white mb-smallest">
+        <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Parc National des Calanques</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="card activities__card bg--white mb-smallest">
+        <img src="./img/activities/notre-dame.jpg" alt="Photo de Notre-Dame-de-la-Garde">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Notre-Dame-de-la-Garde</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="card activities__card bg--white mb-smallest">
+        <img src="./img/activities/parc-lonchamp.jpg" alt="Photo du Parc Longchamp">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Parc Longchamp</h4>
+          </div>
+        </div>
+      </div>
 
     </section>
 
