Premier design en Mobile First

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
 
       <div class="card popular__card bg--white mb-smallest">
-        <img src="./img/popular/soleil-du-matin.jpg" alt="Photo de l'hôtel Le soleil du matin">
+        <img src="./img/lodging/soleil-du-matin.jpg" alt="Photo de l'hôtel Le soleil du matin">
         <div class="card__info">
           <div class="card__text">
             <h4 class="heading-4">Hôtel Le soleil du matin</h4>
@@ -127,7 +127,7 @@
       </div>
 
       <div class="card popular__card bg--white mb-smallest">
-        <img src="./img/popular/coeur-de-l-eau.jpg" alt="Photo d'Au coeur de l'eau">
+        <img src="./img/lodging/coeur-de-l-eau.jpg" alt="Photo d'Au coeur de l'eau">
         <div class="card__info">
           <div class="card__text">
             <h4 class="heading-4">Au cœur de l'eau Chambres d'hôtes</h4>
@@ -144,7 +144,7 @@
       </div>
 
       <div class="card popular__card bg--white mb-smallest">
-        <img src="./img/popular/tout-bleu-et-blanc.jpg" alt="Photo de l'hôtel Tout bleu et Blanc">
+        <img src="./img/lodging/tout-bleu-et-blanc.jpg" alt="Photo de l'hôtel Tout bleu et Blanc">
         <div class="card__info">
           <div class="card__text">
             <h4 class="heading-4">Hôtel Tout bleu et Blanc</h4>
@@ -162,16 +162,121 @@
 
     </section>
 
-    <section class="lodging">
+    <section class="lodging p-smallest m-smallest">
+      <h2 class="heading-2 mb-small">Hébergements à Marseille</h2>
+
+      <div class="card lodging__card bg--white mb-smallest">
+        <img src="./img/lodging/auberge-cannebiere.jpg" alt="Photo de l'Auberge la Cannebière">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Auberge la Cannebière</h4>
+            <p class="paragraph">Nuit à partir de 25€</p>
+          </div>
+          <div class="card__icons">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star color--secondary"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="card lodging__card bg--white mb-smallest">
+        <img src="./img/lodging/hotel-du-port.jpg" alt="Photo de l'Hôtel du port">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Hôtel du port</h4>
+            <p class="paragraph">Nuit à partir de 52€</p>
+          </div>
+          <div class="card__icons">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="card lodging__card bg--white mb-smallest">
+        <img src="./img/lodging/hotel-les-mouettes.jpg" alt="Photo de l'Hôtel Les mouettes">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Hôtel Les mouettes</h4>
+            <p class="paragraph">Nuit à partir de 76€</p>
+          </div>
+          <div class="card__icons">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star color--secondary"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="card lodging__card bg--white mb-smallest">
+        <img src="./img/lodging/hotel-de-la-mer.jpg" alt="Photo de l'Hôtel de la mer">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Hôtel de la mer</h4>
+            <p class="paragraph">Nuit à partir de 46€</p>
+          </div>
+          <div class="card__icons">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star color--secondary"></i>
+            <i class="fas fa-star color--secondary"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="card lodging__card bg--white mb-smallest">
+        <img src="./img/lodging/auberge-le-panier.jpg" alt="Photo de l'Auberge Le Panier">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Auberge Le Panier</h4>
+            <p class="paragraph">Nuit à partir de 23€</p>
+          </div>
+          <div class="card__icons">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star color--secondary"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="card lodging__card bg--white mb-smallest">
+        <img src="./img/lodging/chez-amina.jpg" alt="Photo de l'Hôtel chez Amina">
+        <div class="card__info">
+          <div class="card__text">
+            <h4 class="heading-4">Hôtel chez Amina</h4>
+            <p class="paragraph">Nuit à partir de 96€</p>
+          </div>
+          <div class="card__icons">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+        </div>
+      </div>
+
+      <a href="#" class="lodging__more">Affichez plus</a>
 
     </section>
 
     <section class="activities p-smallest m-smallest">
-      <h2 class="heading-2 mb-smallest">Activités à Marseille</h2>
+      <h2 class="heading-2 mb-small">Activités à Marseille</h2>
 
       <div class="card activities__card bg--white mb-smallest">
         <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
-        <div class="card__info">
+        <div class="card__info p-smallest">
           <div class="card__text">
             <h4 class="heading-4">Vieux Port</h4>
           </div>
@@ -180,7 +285,7 @@
 
       <div class="card activities__card bg--white mb-smallest">
         <img src="./img/activities/fort-de-pomegues.jpg" alt="Photo du Fort de Pomègues">
-        <div class="card__info">
+        <div class="card__info p-smallest">
           <div class="card__text">
             <h4 class="heading-4">Fort de Pomègues</h4>
           </div>
@@ -190,7 +295,7 @@
 
       <div class="card activities__card bg--white mb-smallest">
         <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
-        <div class="card__info">
+        <div class="card__info p-smallest">
           <div class="card__text">
             <h4 class="heading-4">Parc National des Calanques</h4>
           </div>
@@ -199,7 +304,7 @@
 
       <div class="card activities__card bg--white mb-smallest">
         <img src="./img/activities/notre-dame.jpg" alt="Photo de Notre-Dame-de-la-Garde">
-        <div class="card__info">
+        <div class="card__info p-smallest">
           <div class="card__text">
             <h4 class="heading-4">Notre-Dame-de-la-Garde</h4>
           </div>
@@ -208,7 +313,7 @@
 
       <div class="card activities__card bg--white mb-smallest">
         <img src="./img/activities/parc-lonchamp.jpg" alt="Photo du Parc Longchamp">
-        <div class="card__info">
+        <div class="card__info p-smallest">
           <div class="card__text">
             <h4 class="heading-4">Parc Longchamp</h4>
           </div>
