Modification du padding

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <header class="header">
 
-    <div class="header__logo p-smallest">
+    <div class="header__logo">
       <img src="./img/Reservia.svg" alt="Logo de Reservia">
     </div>
 
@@ -50,7 +50,7 @@
 
   <main class="main">
 
-    <header class="main-header">
+    <header class="main-header p-small">
       <h1 class="heading-1">Trouvez votre hébergement pour des vacances de rêve</h1>
       <p class="paragraph">En plein centre ville ou en pleine nature</p>
 
@@ -104,8 +104,8 @@
       </div>
     </header>
 
-    <section class="popular bg--secondary p-smallest">
-      <div class="popular__header m-small">
+    <section class="popular bg--secondary p-small">
+      <div class="popular__header mb-smallest">
         <h2 class="popular__title heading-2">Les plus populaires</h2>
         <i class="fas fa-chart-line"></i>
       </div>
@@ -165,10 +165,10 @@
 
     </section>
 
-    <section id="lodging" class="lodging">
-      <h2 class="heading-2">Hébergements à Marseille</h2>
+    <section id="lodging" class="lodging p-small">
+      <h2 class="heading-2 mb-smallest">Hébergements à Marseille</h2>
 
-      <div class="card lodging__card bg--white">
+      <div class="card lodging__card bg--white mb-smallest">
         <img src="./img/lodging/auberge-cannebiere.jpg" alt="Photo de l'Auberge la Cannebière">
         <div class="card__info">
           <div class="card__text">
@@ -274,7 +274,7 @@
 
     </section>
 
-    <section id="activities" class="activities">
+    <section id="activities" class="activities p-small">
       <h2 class="heading-2 mb-smallest">Activités à Marseille</h2>
 
       <div class="card activities__card bg--white mb-smallest">
