--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <section id="lodging" class="lodging p-small">
       <h2 class="heading-2 mb-smallest">Hébergements à Marseille</h2>
 
-      <div class="card lodging__card bg--white mb-smallest">
+      <div class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/auberge-cannebiere.jpg" alt="Photo de l'Auberge la Cannebière">
         <div class="card__info">
           <div class="card__text">
@@ -185,7 +185,7 @@
         </div>
       </div>
 
-      <div class="card lodging__card bg--white mb-smallest">
+      <div class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/hotel-du-port.jpg" alt="Photo de l'Hôtel du port">
         <div class="card__info">
           <div class="card__text">
@@ -202,7 +202,7 @@
         </div>
       </div>
 
-      <div class="card lodging__card bg--white mb-smallest">
+      <div class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/hotel-les-mouettes.jpg" alt="Photo de l'Hôtel Les mouettes">
         <div class="card__info">
           <div class="card__text">
@@ -219,7 +219,7 @@
         </div>
       </div>
 
-      <div class="card lodging__card bg--white mb-smallest">
+      <div class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/hotel-de-la-mer.jpg" alt="Photo de l'Hôtel de la mer">
         <div class="card__info">
           <div class="card__text">
@@ -236,7 +236,7 @@
         </div>
       </div>
 
-      <div class="card lodging__card bg--white mb-smallest">
+      <div class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/auberge-le-panier.jpg" alt="Photo de l'Auberge Le Panier">
         <div class="card__info">
           <div class="card__text">
@@ -253,7 +253,7 @@
         </div>
       </div>
 
-      <div class="card lodging__card bg--white mb-smallest">
+      <div class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/chez-amina.jpg" alt="Photo de l'Hôtel chez Amina">
         <div class="card__info">
           <div class="card__text">
@@ -275,9 +275,9 @@
     </section>
 
     <section id="activities" class="activities p-small">
-      <h2 class="heading-2 mb-smallest">Activités à Marseille</h2>
+      <!-- <h2 class="heading-2 mb-smallest">Activités à Marseille</h2> -->
 
-      <div class="card activities__card bg--white mb-smallest">
+      <div class="card card--horizontal activities__card bg--white mb-smallest">
         <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
         <div class="card__info p-smallest">
           <div class="card__text">
@@ -286,7 +286,7 @@
         </div>
       </div>
 
-      <div class="card activities__card bg--white mb-smallest">
+      <div class="card card--horizontal activities__card bg--white mb-smallest">
         <img src="./img/activities/fort-de-pomegues.jpg" alt="Photo du Fort de Pomègues">
         <div class="card__info p-smallest">
           <div class="card__text">
@@ -295,8 +295,17 @@
         </div>
       </div>
 
+      <div class="card card--horizontal activities__card bg--white mb-smallest">
+        <img src="./img/activities/iles-du-frioul.jpg" alt="Photo des Îles du Frioul">
+        <div class="card__info p-smallest">
+          <div class="card__text">
+            <h4 class="heading-4">Îles du Frioul</h4>
+          </div>
+        </div>
+      </div>
 
-      <div class="card activities__card bg--white mb-smallest">
+
+      <div class="card card--horizontal activities__card bg--white mb-smallest">
         <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
         <div class="card__info p-smallest">
           <div class="card__text">
@@ -305,7 +314,7 @@
         </div>
       </div>
 
-      <div class="card activities__card bg--white mb-smallest">
+      <div class="card card--horizontal activities__card bg--white mb-smallest">
         <img src="./img/activities/notre-dame.jpg" alt="Photo de Notre-Dame-de-la-Garde">
         <div class="card__info p-smallest">
           <div class="card__text">
@@ -314,7 +323,7 @@
         </div>
       </div>
 
-      <div class="card activities__card bg--white mb-smallest">
+      <div class="card card--horizontal activities__card bg--white mb-smallest">
         <img src="./img/activities/parc-lonchamp.jpg" alt="Photo du Parc Longchamp">
         <div class="card__info p-smallest">
           <div class="card__text">
