Mise à jour du Responsive

--- a/index.html
+++ b/index.html
@@ -275,59 +275,61 @@
     </section>
 
     <section id="activities" class="activities p-small">
-      <!-- <h2 class="heading-2 mb-smallest">Activités à Marseille</h2> -->
+      <h2 class="heading-2 mb-smallest">Activités à Marseille</h2>
 
-      <div class="card card--horizontal activities__card bg--white mb-smallest">
-        <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
-        <div class="card__info p-smallest">
-          <div class="card__text">
-            <h4 class="heading-4">Vieux Port</h4>
+      <div class="activities__container">
+        <div class="card card--horizontal activities__card bg--white mb-smallest">
+          <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
+          <div class="card__info p-smallest">
+            <div class="card__text">
+              <h4 class="heading-4">Vieux Port</h4>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card card--horizontal activities__card bg--white mb-smallest">
-        <img src="./img/activities/fort-de-pomegues.jpg" alt="Photo du Fort de Pomègues">
-        <div class="card__info p-smallest">
-          <div class="card__text">
-            <h4 class="heading-4">Fort de Pomègues</h4>
+        <div class="card card--horizontal activities__card bg--white mb-smallest">
+          <img src="./img/activities/fort-de-pomegues.jpg" alt="Photo du Fort de Pomègues">
+          <div class="card__info p-smallest">
+            <div class="card__text">
+              <h4 class="heading-4">Fort de Pomègues</h4>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card card--horizontal activities__card bg--white mb-smallest">
-        <img src="./img/activities/iles-du-frioul.jpg" alt="Photo des Îles du Frioul">
-        <div class="card__info p-smallest">
-          <div class="card__text">
-            <h4 class="heading-4">Îles du Frioul</h4>
+        <div class="card card--horizontal activities__card bg--white mb-smallest">
+          <img src="./img/activities/iles-du-frioul.jpg" alt="Photo des Îles du Frioul">
+          <div class="card__info p-smallest">
+            <div class="card__text">
+              <h4 class="heading-4">Îles du Frioul</h4>
+            </div>
           </div>
         </div>
-      </div>
 
 
-      <div class="card card--horizontal activities__card bg--white mb-smallest">
-        <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
-        <div class="card__info p-smallest">
-          <div class="card__text">
-            <h4 class="heading-4">Parc National des Calanques</h4>
+        <div class="card card--horizontal activities__card bg--white mb-smallest">
+          <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
+          <div class="card__info p-smallest">
+            <div class="card__text">
+              <h4 class="heading-4">Parc National des Calanques</h4>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card card--horizontal activities__card bg--white mb-smallest">
-        <img src="./img/activities/notre-dame.jpg" alt="Photo de Notre-Dame-de-la-Garde">
-        <div class="card__info p-smallest">
-          <div class="card__text">
-            <h4 class="heading-4">Notre-Dame-de-la-Garde</h4>
+        <div class="card card--horizontal activities__card bg--white mb-smallest">
+          <img src="./img/activities/notre-dame.jpg" alt="Photo de Notre-Dame-de-la-Garde">
+          <div class="card__info p-smallest">
+            <div class="card__text">
+              <h4 class="heading-4">Notre-Dame-de-la-Garde</h4>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card card--horizontal activities__card bg--white mb-smallest">
-        <img src="./img/activities/parc-lonchamp.jpg" alt="Photo du Parc Longchamp">
-        <div class="card__info p-smallest">
-          <div class="card__text">
-            <h4 class="heading-4">Parc Longchamp</h4>
+        <div class="card card--horizontal activities__card bg--white mb-smallest">
+          <img src="./img/activities/parc-lonchamp.jpg" alt="Photo du Parc Longchamp">
+          <div class="card__info p-smallest">
+            <div class="card__text">
+              <h4 class="heading-4">Parc Longchamp</h4>
+            </div>
           </div>
         </div>
       </div>
